<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">myPlanet Lite</string>
    <string name="app_name_prefix">myPlanet</string>
    <string name="app_name_suffix">Lite</string>
    <string name="app_version">Version %1$s</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_action">Login</string>
    <string name="login_username_error">Enter your username</string>
    <string name="login_password_error">The password must be at least 4 characters long</string>
    <string name="login_invalid_credentials">Incorrect username or password</string>
    <string name="login_generic_error">Couldn\'t sign in. Please try again.</string>
    <string name="logo">Logo</string>
    <string name="login_signup_prompt">Don\'t have an account?</string>
    <string name="login_signup_action">Sign Up</string>
    <string name="login_privacy_policy_prompt">Read our <font color="@color/login_primary">Privacy Policy</font></string>
    <string name="login_survey_translation_consent_title">Survey translations</string>
    <string name="login_survey_translation_consent_description">To offer you survey translations, we need your consent to process the text securely.</string>
    <string name="login_survey_translation_consent_accept">Enable translations and accept the translation privacy policy</string>
    <string name="login_survey_translation_consent_policy">Review the translation privacy policy</string>
    <string name="login_server_label">Select a server</string>
    <string name="login_server_error">Select or enter a server</string>
    <string name="login_remember_action">Remember me</string>
    <string name="server_planet_xela">Planet Xela</string>
    <string name="server_planet_guatemala">Planet Guatemala</string>
    <string name="server_planet_san_pablo">Planet San Pablo</string>
    <string name="server_planet_somalia">Planet Somalia</string>
    <string name="server_planet_learning">Learning</string>
    <string name="server_planet_earth">Earth</string>
    <string name="server_planet_vi">Planet VI</string>
    <string name="server_planet_uriur">Uriur</string>
    <string name="server_configuration_title">Configure server</string>
    <string name="server_configuration_url_hint">Server address</string>
    <string name="server_configuration_name_hint">Server name</string>
    <string name="server_configuration_country_hint">Flag</string>
    <string name="server_configuration_save">Save</string>
    <string name="server_configuration_url_error">Enter a server address</string>
    <string name="server_configuration_name_error">Enter a server name</string>
    <string name="server_configuration_country_error">Select a flag</string>
    <string name="server_configuration_add_button">Add</string>
    <string name="server_configuration_added">Server added to list</string>
    <string name="server_configuration_duplicate_error">The server already exists in the list</string>
    <string name="server_option_configure">Add server…</string>
    <string name="server_option_clear">Clear servers</string>
    <string name="language_selector_content_description">Select language</string>
    <string name="language_selector_title">Choose language</string>
    <string name="language_name_english">English</string>
    <string name="language_name_spanish">Español</string>
    <string name="language_name_french">Français</string>
    <string name="language_name_portuguese">Português</string>
    <string name="language_name_arabic">العربية</string>
    <string name="language_name_somali">Soomaali</string>
    <string name="language_name_nepali">नेपाली</string>
    <string name="language_name_hindi">हिन्दी</string>
    <string name="powered_by_plataformas_informaticas" translatable="false"><![CDATA[Powered by <a href="http://plataformasinformaticas.com">Plataformas Informáticas</a>]]></string>
    <string name="signup_navigate_back">Go back</string>
    <string name="signup_header_message">Complete these steps to be part of the learning community.</string>
    <string name="signup_header_title" translatable="false">Planet</string>
    <string name="signup_username_label">@string/login_username_label</string>
    <string name="signup_password_label">@string/login_password_label</string>
    <string name="signup_confirm_password_label">Confirm password</string>
    <string name="signup_first_name_label">First name</string>
    <string name="signup_middle_name_label">Middle name</string>
    <string name="signup_last_name_label">Last name</string>
    <string name="signup_language_label">Language</string>
    <string name="signup_gender_label">Gender</string>
    <string name="signup_birth_date_label">Birth date</string>
    <string name="signup_level_label">Level</string>
    <string name="signup_email_label">Email</string>
    <string name="signup_email_error_invalid">Enter a valid email address</string>
    <string name="signup_password_error_mismatch">Passwords must match</string>
    <string name="signup_password_error_length">Password must be at least 6 characters long</string>
    <string name="signup_username_error_invalid">Enter a username that starts with a letter and uses only letters and numbers</string>
    <string name="signup_first_name_error_required">Enter your first name</string>
    <string name="signup_last_name_error_required">Enter your last name</string>
    <string name="signup_birth_date_error_required">Select your birth date</string>
    <string name="signup_gender_error_required">Select a gender option</string>
    <string name="signup_phone_label">Mobile number</string>
    <string name="signup_phone_error_invalid">Enter a valid mobile number</string>
    <string name="signup_language_error_required">Select a language</string>
    <string name="signup_level_error_required">Select a level</string>
    <string name="signup_birth_date_picker_title">Select birth date</string>
    <string name="signup_next_action">Next</string>
    <string name="signup_back_action">Back</string>
    <string name="signup_accept_action">Accept</string>
    <string name="signup_connection_checking">Checking server connection…</string>
    <string name="signup_connection_error_retry">Couldn\'t connect to the server. Tap to retry.</string>
    <string name="signup_connection_error_input">Couldn\'t connect to the server.</string>
    <string name="signup_username_checking">Checking username availability…</string>
    <string name="signup_username_error_taken">This username is already in use.</string>
    <string name="dashboard_offline_mode_only_surveys">Offline mode: only surveys are available.</string>
    <string name="dashboard_online_mode_restored">Connection restored: all panels are enabled.</string>
    <string name="dashboard_survey_download">Download</string>
    <string name="dashboard_survey_downloaded">Downloaded</string>
    <string name="dashboard_survey_download_success">Survey saved for offline use.</string>
    <string name="dashboard_survey_download_error">Couldn\'t save the survey for offline use.</string>
    <string name="dashboard_surveys_tab_outbox">Pending</string>
    <string name="dashboard_surveys_outbox_empty">No pending submissions.</string>
    <string name="dashboard_survey_submission_saved_offline">Submission saved to outbox for sync.</string>
    <string name="dashboard_outbox_saved_at">Saved offline on %1$s</string>
    <string name="dashboard_outbox_unknown_survey">Survey</string>
    <string name="dashboard_outbox_unknown_team">Team</string>
    <string name="dashboard_outbox_detail_intro">These are the answers you filled. Review them and tap send when you are ready.</string>
    <string name="dashboard_outbox_send">Send</string>
    <string name="dashboard_outbox_send_placeholder">Sync will be available soon.</string>
    <string name="dashboard_outbox_no_answers">No answers were captured.</string>
    <string name="dashboard_outbox_no_answer">No answer</string>
    <string name="dashboard_outbox_preview_title">Preview</string>
    <string name="dashboard_outbox_unknown_question">Question %1$d</string>
    <string name="dashboard_outbox_missing_entry">Pending submission not found.</string>
    <string name="dashboard_outbox_birthdate_format">Birth date: %1$s</string>
    <string name="dashboard_outbox_age_format">Age: %1$d</string>
    <string name="dashboard_outbox_gender_format">Gender: %1$s</string>
    <string name="dashboard_outbox_language_format">Language: %1$s</string>
    <string name="dashboard_outbox_level_format">Level: %1$s</string>
    <string name="dashboard_outbox_phone_format">Phone: %1$s</string>
    <string name="dashboard_outbox_email_format">Email: %1$s</string>
    <string name="dashboard_outbox_participant_details">Participant details</string>
    <string name="dashboard_outbox_offline_cannot_send">Connect to the internet to send this submission.</string>
    <string name="dashboard_outbox_unable_to_verify_rev">Couldn\'t verify the survey version on the server.</string>
    <string name="dashboard_outbox_send_success">Submission sent successfully.</string>
    <string name="dashboard_outbox_send_failed">Couldn\'t send the submission. Try again.</string>
    <string name="dashboard_outbox_rev_mismatch_title">Survey changed</string>
    <string name="dashboard_outbox_rev_mismatch_message">This survey has changed on the server, so it can\'t be synced. Do you want to delete it or keep it archived?</string>
    <string name="signup_gender_option_male">Male</string>
    <string name="signup_gender_option_female">Female</string>
    <string name="dashboard_invite_members_title">Invite People to this Team</string>
    <string name="dashboard_invite_members_subtitle">Add users to the team by pressing the + button.</string>
    <string name="dashboard_invite_members_search_hint">Search team members...</string>
    <string name="dashboard_invite_members_cancel">Close</string>
    <string name="profile_title">Profile</string>
    <string name="profile_description">Review and edit your personal information.</string>
    <string name="profile_section_account">Account</string>
    <string name="profile_section_personal">Personal details</string>
    <string name="profile_section_contact">Contact information</string>
    <string name="profile_section_learning">Learning preferences</string>
    <string name="profile_username_label">@string/login_username_label</string>
    <string name="profile_avatar_label">Avatar</string>
    <string name="profile_avatar_hint">Choose a photo to preview how it looks in circular and square frames.</string>
    <string name="profile_avatar_preview_circle_label">Circular</string>
    <string name="profile_avatar_preview_square_label">Square</string>
    <string name="profile_avatar_preview_circle_content_description">Circular avatar preview</string>
    <string name="profile_avatar_preview_square_content_description">Square avatar preview</string>
    <string name="profile_avatar_change_button">Choose image</string>
    <string name="profile_loading_message">Updating your information&#8230;</string>
    <string name="profile_save_button">Save changes</string>
    <string name="profile_field_first_name">@string/signup_first_name_label</string>
    <string name="profile_field_middle_name">@string/signup_middle_name_label</string>
    <string name="profile_field_last_name">@string/signup_last_name_label</string>
    <string name="profile_field_email">@string/signup_email_label</string>
    <string name="profile_field_phone">Phone number</string>
    <string name="profile_field_language">@string/signup_language_label</string>
    <string name="profile_field_birth_date">@string/signup_birth_date_label</string>
    <string name="profile_field_gender">@string/signup_gender_label</string>
    <string name="profile_field_level">Learning level</string>
</resources>